--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -13,4 +13,10 @@ The AppID provider provides resources to interact with a IBM AppID API.
 
 {{tffile "examples/provider/main.tf"}}
 
+## Environment Variables
+
+You can provide your IBM Cloud API Key by exporting the `IC_API_KEY`, `IBMCLOUD_API_KEY`, or `IAM_API_KEY` environment variables.
+Alternatively, you can set IAM Access token by exporting the `IC_IAM_TOKEN`, `IBMCLOUD_IAM_TOKEN`, or `IAM_ACCESS_TOKEN` environment variables.
+
+
 {{ .SchemaMarkdown | trimspace }}
